# ros_humble_course

nodos_varios/: package.xml  setup.cfg  setup.py
nodos_varios/nodos_varios/: node_test.py  node_translation.py  node_window.py  primer_parametros.py  simple_client.py  simple_servide.py  simple_tf_kinematics.py  teleop_keyboard_robot.py  test_lectura_vel.py  test_save_node.py
ntarobot_msg/: CMakeLists.txt  package.xml
ntarobot_msg/srv/: GetTransfrom.srv
robot_control_1/: CMakeLists.txt  package.xml
robot_control_1/config/: robot_control.yaml
robot_control_1/launch/: controller.launch.py
robot_control_1/robot_control_1/: simple_controller_speed.py
robot_description_1/: CMakeLists.txt  package.xml
robot_description_1/launch/: display.launch.py  gazebo.launch.py
robot_description_1/urdf/: ntarobot.urdf.xacro  ntarobot_gazebo.xacro  ntarobot_ros_control.xacro
solver_robot/: CMakeLists.txt  README.md  package.xml
solver_robot/description/: robot.urdf.xacro  robot_core.xacro
solver_robot/launch/: rsp.launch.py
solver_untils/: CMakeLists.txt  package.xml
solver_untils/msg/: MotorOrder.msg  ParmRob.msg  RobotGeneralP.msg  SoftParm.msg  SuppState.msg
